<resources>
    <string name="app_name">HungryGames</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_button">Add Restaurant</string>
    <string name="delete_button">DELETE</string>
    <string name="get_button">GET RESTAURANT</string>
    <string name="username_tv">Username :</string>
    <string name="password_tv">Password :</string>
    <string name="username_et">Input username here!</string>
    <string name="password_et">Input password here!</string>
    <string name="login_b">Login</string>
    <string name="register_b">Register</string>
    <string name="name">Name</string>
    <string name="weight">Weight</string>
    <string name="add">Add</string>
    <string name="change">Change</string>
    <string name="welcome_user">Welcome %s!</string>
    <string name="split_check">Split Check</string>
    <string name="default_welcome_message">Hello username!</string>
    <string name="individual_option">I want to eat alone</string>
    <string name="group_option">Having a party</string>
    <string name="personal_restaurant_list">My restaurants</string>
</resources>
