<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvAddName"
        android:text="@string/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvAddWeight"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/etAddName"/>

    <TextView
        android:id="@+id/tvAddWeight"
        android:text="@string/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvAddName"
        app:layout_constraintBottom_toTopOf="@id/btnAdd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/etAddWeight"/>

    <EditText
        android:id="@+id/etAddName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tvAddName"
        app:layout_constraintBottom_toBottomOf="@id/tvAddName"
        app:layout_constraintLeft_toRightOf="@id/tvAddName"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/etAddWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tvAddWeight"
        app:layout_constraintBottom_toBottomOf="@id/tvAddWeight"
        app:layout_constraintLeft_toRightOf="@id/tvAddWeight"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        app:layout_constraintTop_toBottomOf="@id/tvAddWeight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>